// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MeetingRow (collapsed) > matches snapshot in collapsed state with isPast and follow-up sent 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="has-aria-expanded:bg-muted border-b transition-colors hover:bg-muted data-[state=selected]:bg-muted"
        data-slot="table-row"
      >
        <td
          class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
          data-slot="table-cell"
        >
          <button
            aria-expanded="false"
            aria-label="Expand meeting with Jane Rep"
            class="inline-flex shrink-0 items-center justify-center gap-2 rounded-md text-sm font-medium whitespace-nowrap transition-all outline-none focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 size-9"
            data-size="icon"
            data-slot="button"
            data-variant="ghost"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-right h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
          </button>
        </td>
        <td
          class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
          data-slot="table-cell"
        >
          Jan 1, 2020
        </td>
        <td
          class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
          data-slot="table-cell"
        >
          —
        </td>
        <td
          class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] max-w-0"
          data-slot="table-cell"
        >
          <div
            class="truncate"
          >
            <a
              class="text-primary-dark underline-offset-4 hover:underline"
              href="/representatives/R000001"
            >
              Rep. Jane Rep
            </a>
             — WA (D)
          </div>
        </td>
        <td
          class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] max-w-0 truncate"
          data-slot="table-cell"
        >
          <em>
            Congressperson
          </em>
        </td>
        <td
          class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] max-w-0"
          data-slot="table-cell"
        >
          <a
            class="block truncate text-primary-dark underline-offset-4 hover:underline"
            href="/teams/global-health"
          >
            Global Health
          </a>
        </td>
        <td
          class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] max-w-0 truncate"
          data-slot="table-cell"
        >
          Alice Lead
        </td>
        <td
          class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-center"
          data-slot="table-cell"
        >
          <svg
            aria-label="Follow-up sent"
            class="lucide lucide-circle-check-big m-auto h-4 w-4 text-green-600"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21.801 10A10 10 0 1 1 17 3.335"
            />
            <path
              d="m9 11 3 3L22 4"
            />
          </svg>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`MeetingRow (collapsed) > matches snapshot in collapsed state with isPast and no follow-up 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="has-aria-expanded:bg-muted border-b transition-colors hover:bg-muted data-[state=selected]:bg-muted"
        data-slot="table-row"
      >
        <td
          class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
          data-slot="table-cell"
        >
          <button
            aria-expanded="false"
            aria-label="Expand meeting with Jane Rep"
            class="inline-flex shrink-0 items-center justify-center gap-2 rounded-md text-sm font-medium whitespace-nowrap transition-all outline-none focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 size-9"
            data-size="icon"
            data-slot="button"
            data-variant="ghost"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-right h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
          </button>
        </td>
        <td
          class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
          data-slot="table-cell"
        >
          Jan 1, 2020
        </td>
        <td
          class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
          data-slot="table-cell"
        >
          —
        </td>
        <td
          class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] max-w-0"
          data-slot="table-cell"
        >
          <div
            class="truncate"
          >
            <a
              class="text-primary-dark underline-offset-4 hover:underline"
              href="/representatives/R000001"
            >
              Rep. Jane Rep
            </a>
             — WA (D)
          </div>
        </td>
        <td
          class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] max-w-0 truncate"
          data-slot="table-cell"
        >
          <em>
            Congressperson
          </em>
        </td>
        <td
          class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] max-w-0"
          data-slot="table-cell"
        >
          —
        </td>
        <td
          class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] max-w-0 truncate"
          data-slot="table-cell"
        >
          —
        </td>
        <td
          class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-center"
          data-slot="table-cell"
        />
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`MeetingRow (collapsed) > matches snapshot in collapsed state without isPast 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="has-aria-expanded:bg-muted border-b transition-colors hover:bg-muted data-[state=selected]:bg-muted"
        data-slot="table-row"
      >
        <td
          class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
          data-slot="table-cell"
        >
          <button
            aria-expanded="false"
            aria-label="Expand meeting with Jane Rep"
            class="inline-flex shrink-0 items-center justify-center gap-2 rounded-md text-sm font-medium whitespace-nowrap transition-all outline-none focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 size-9"
            data-size="icon"
            data-slot="button"
            data-variant="ghost"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-right h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
          </button>
        </td>
        <td
          class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
          data-slot="table-cell"
        >
          Jun 1, 2099
        </td>
        <td
          class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
          data-slot="table-cell"
        >
          —
        </td>
        <td
          class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] max-w-0"
          data-slot="table-cell"
        >
          <div
            class="truncate"
          >
            <a
              class="text-primary-dark underline-offset-4 hover:underline"
              href="/representatives/R000001"
            >
              Rep. Jane Rep
            </a>
             — WA (D)
          </div>
        </td>
        <td
          class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] max-w-0 truncate"
          data-slot="table-cell"
        >
          <em>
            Congressperson
          </em>
        </td>
        <td
          class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] max-w-0"
          data-slot="table-cell"
        >
          <a
            class="block truncate text-primary-dark underline-offset-4 hover:underline"
            href="/teams/global-health"
          >
            Global Health
          </a>
        </td>
        <td
          class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] max-w-0 truncate"
          data-slot="table-cell"
        >
          Alice Lead
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`MeetingsSection > matches snapshot empty state 1`] = `
<DocumentFragment>
  <section
    aria-labelledby="past-meetings"
  >
    <h2
      class="mb-3 text-2xl font-bold"
      id="past-meetings"
    >
      Past Meetings
    </h2>
    <p
      class="py-8 text-center text-muted-foreground"
    >
      No meetings found.
    </p>
  </section>
</DocumentFragment>
`;

exports[`MeetingsSection > matches snapshot with meetings 1`] = `
<DocumentFragment>
  <section
    aria-labelledby="upcoming-meetings"
  >
    <h2
      class="mb-3 text-2xl font-bold"
      id="upcoming-meetings"
    >
      Upcoming Meetings
    </h2>
    <div
      class="relative w-full overflow-x-auto rounded-md border"
      data-slot="table-container"
    >
      <table
        class="w-full caption-bottom text-sm [&_td:first-child]:pl-4 [&_td:last-child]:pr-4 [&_th:first-child]:pl-4 [&_th:last-child]:pr-4"
        data-slot="table"
      >
        <caption
          class="sr-only"
        >
          Upcoming Meetings
        </caption>
        <thead
          class="[&_th]:text-primary-foreground [&_tr]:border-b [&_tr]:bg-primary [&_tr]:hover:bg-primary"
          data-slot="table-header"
        >
          <tr
            class="has-aria-expanded:bg-muted border-b transition-colors hover:bg-muted data-[state=selected]:bg-muted"
            data-slot="table-row"
          >
            <th
              class="h-10 whitespace-nowrap px-2 text-left align-middle font-medium text-foreground [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] w-10"
              data-slot="table-head"
            >
              <span
                class="sr-only"
              >
                Actions
              </span>
            </th>
            <th
              class="h-10 whitespace-nowrap px-2 text-left align-middle font-medium text-foreground [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] w-28"
              data-slot="table-head"
            >
              Date
            </th>
            <th
              class="h-10 whitespace-nowrap px-2 text-left align-middle font-medium text-foreground [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] w-24"
              data-slot="table-head"
            >
              Time
            </th>
            <th
              class="h-10 whitespace-nowrap px-2 text-left align-middle font-medium text-foreground [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] w-56"
              data-slot="table-head"
            >
              Member of Congress
            </th>
            <th
              class="h-10 whitespace-nowrap px-2 text-left align-middle font-medium text-foreground [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] w-36"
              data-slot="table-head"
            >
              Staff Contact
            </th>
            <th
              class="h-10 whitespace-nowrap px-2 text-left align-middle font-medium text-foreground [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] w-52"
              data-slot="table-head"
            >
              PIH Team
            </th>
            <th
              class="h-10 whitespace-nowrap px-2 text-left align-middle font-medium text-foreground [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] w-36"
              data-slot="table-head"
            >
              Scheduling Lead
            </th>
          </tr>
        </thead>
        <tbody
          class="[&_tr:last-child]:border-0"
          data-slot="table-body"
        >
          <tr
            class="has-aria-expanded:bg-muted border-b transition-colors hover:bg-muted data-[state=selected]:bg-muted"
            data-slot="table-row"
          >
            <td
              class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              data-slot="table-cell"
            >
              <button
                aria-expanded="false"
                aria-label="Expand meeting with Jane Rep"
                class="inline-flex shrink-0 items-center justify-center gap-2 rounded-md text-sm font-medium whitespace-nowrap transition-all outline-none focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 size-9"
                data-size="icon"
                data-slot="button"
                data-variant="ghost"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-chevron-right h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
              </button>
            </td>
            <td
              class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              data-slot="table-cell"
            >
              Jun 1, 2099
            </td>
            <td
              class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              data-slot="table-cell"
            >
              —
            </td>
            <td
              class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] max-w-0"
              data-slot="table-cell"
            >
              <div
                class="truncate"
              >
                <a
                  class="text-primary-dark underline-offset-4 hover:underline"
                  href="/representatives/R000001"
                >
                  Rep. Jane Rep
                </a>
                 — WA (D)
              </div>
            </td>
            <td
              class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] max-w-0 truncate"
              data-slot="table-cell"
            >
              <em>
                Congressperson
              </em>
            </td>
            <td
              class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] max-w-0"
              data-slot="table-cell"
            >
              —
            </td>
            <td
              class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] max-w-0 truncate"
              data-slot="table-cell"
            >
              —
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </section>
</DocumentFragment>
`;
